# MPI_TEST

./: CMakeLists.txt  CPU.sh  README.md  build.sh  main.cxx
